--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
     <title>Simulador de Carrito de compra Con Codigo de Descuentos</title>
   </head>
   <body>
+    <div class="container py-4">
+      <h2 class="text-center mb-4">Tienda</h2>
+      <div id="contenedor-productos" class="row g-4 justify-content-center">
+        <!-- Aquí se agregan las tarjetas de productos con JS -->
+      </div>
+
+      <h2 class="text-center my-4">Carrito</h2>
+      <div id="contenedor-carrito" class="row g-4 justify-content-center">
+        <!-- Aquí se agregan las tarjetas del carrito con JS -->
+      </div>
+      <div
+        class="d-flex justify-content-between align-items-center mt-4 border-top pt-3"
+      >
+        <h4>Total: $<span id="total-general">0</span></h4>
+        <button class="btn btn-success" id="btn-pagar">Pagar</button>
+      </div>
+    </div>
     <script src="js/script.js"></script>
   </body>
 </html>
