--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               data-bs-toggle="dropdown"
               aria-expanded="false"
             >
-              Filtrar
+              Categorias
             </button>
             <ul class="dropdown-menu" aria-labelledby="filtrosDropdown">
               <li>
